exports[`test counter 1`] = `
Object {
  "counter": Object {
    "count": 1
  },
  "randomGifs": Object {
    "cat": Object {
      "gifUrl": null,
      "isLoading": false
    },
    "dog": Object {
      "gifUrl": null,
      "isLoading": false
    },
    "gify": Object {
      "gifUrl": null,
      "isLoading": false
    },
    "minion": Object {
      "gifUrl": null,
      "isLoading": false
    }
  }
}
`;

exports[`test randomGifs 1`] = `
Object {
  "counter": Object {
    "count": 0
  },
  "randomGifs": Object {
    "cat": Object {
      "gifUrl": null,
      "isLoading": true
    },
    "dog": Object {
      "gifUrl": null,
      "isLoading": false
    },
    "gify": Object {
      "gifUrl": null,
      "isLoading": false
    },
    "minion": Object {
      "gifUrl": null,
      "isLoading": false
    }
  }
}
`;
